--- a/views/index.erb
+++ b/views/index.erb
@@ -14,6 +14,7 @@
 </form>
 <label><%= @@resultado_palabra %></label>
 <br>
-<label><%= @@resultado_letra %></label>
+<label><%= @@resultado_letra %></label><br>
+<label>Chances = <%= @@contador %></label>
 </body>
 </html>
