--- a/views/index.erb
+++ b/views/index.erb
@@ -16,5 +16,7 @@
 <br>
 <label><%= @@resultado_letra %></label><br>
 <label>Chances = <%= @@contador %></label>
+<br>
+<label>Letras ingresadas = <%= @@lista_letras %></label>
 </body>
 </html>
